--- a/src/common/styles/globals.css
+++ b/src/common/styles/globals.css
@@ -7,3 +7,21 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.scroll {
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.scroll::-webkit-scrollbar {
+  width: 3px;
+}
+
+.scroll::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 8px;
+}
+
+.scroll::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
