--- a/src/common/styles/globals.css
+++ b/src/common/styles/globals.css
@@ -3,34 +3,40 @@
 @tailwind utilities;
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 .custom-placeholder::placeholder {
-  color: #000;
+    color: #000;
 }
 .scroll {
-  overflow-y: scroll;
-  overflow-x: hidden;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .scroll::-webkit-scrollbar {
-  width: 3px;
+    width: 3px;
 }
 
 .scroll::-webkit-scrollbar-thumb {
-  background: #888;
-  border-radius: 8px;
+    background: #888;
+    border-radius: 8px;
 }
 
 .scroll::-webkit-scrollbar-thumb:hover {
-  background: #555;
+    background: #555;
 }
-.twenty-fives{
-  overflow-x: hidden;
+.twenty-fives {
+    overflow-x: hidden;
 }
-.no-padding-bottom{
-  padding-bottom: 0px;
+.no-padding-bottom {
+    padding-bottom: 0px;
+}
+.textEndThreeDot {
+    display: -webkit-box;
+    -webkit-line-clamp: 6;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
