feat(global): add black overlay on opened modals

--- a/src/common/styles/globals.css
+++ b/src/common/styles/globals.css
@@ -40,3 +40,13 @@
     -webkit-box-orient: vertical;
     overflow: hidden;
 }
+.overlay {
+    display: flex !important;
+    position: fixed !important; 
+    top: 0 !important;
+    left: 0 !important;
+    width: 100% !important; 
+    height: 100% !important; 
+    background-color: rgba(0, 0, 0, 0.5) !important; 
+    z-index: 1 !important; 
+  }
