--- a/src/common/styles/globals.css
+++ b/src/common/styles/globals.css
@@ -28,6 +28,27 @@
 .scroll::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
-.twenty-fives{
+.twenty-fives {
   overflow-x: hidden;
+}
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+.swiper-slide {
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+  margin: 0 !important;
+}
+.HoursForecast {
+  max-width: 378px;
+  width: 100%;
+  height: 121px;
+  background-color: #0000004d;
+  border-radius: 18px;
+  padding-left: 22px !important;
+  padding-right: 22px !important;
+  display: flex !important;
+  align-items: center !important;
 }
