--- a/src/common/styles/globals.css
+++ b/src/common/styles/globals.css
@@ -60,6 +60,7 @@
     left: 0 !important;
     width: 100% !important; 
     height: 100% !important; 
-    background-color: rgba(0, 0, 0, 0.5) !important; 
+    background-color: rgba(0, 0, 0, 0.7059) !important; 
+    backdrop-filter: blur(2px);
     z-index: 1 !important; 
   }
