--- a/src/common/styles/globals.css
+++ b/src/common/styles/globals.css
@@ -64,3 +64,9 @@
     backdrop-filter: blur(2px);
     z-index: 1 !important;
 }
+
+.radial-gradient {
+    background: rgb(255,255,255);
+background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgb(255, 255, 255) 1%, rgb(255, 255, 255) 1%);
+filter: blur(70px);
+}
